--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN: ${{ secrets.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 }}
