--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v2
         with:
+          lfs: true
           github_user_name: BrydeRov
           token: ${{ secrets.SNAKEWORKFLOW_TOKEN }}
           outputs: dist/snake.svg
@@ -29,5 +30,3 @@ jobs:
         with:
           target_branch: output
           build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.SNAKEWORKFLOW_TOKEN }}
