--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.SNAKEWORKFLOW_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.JUSTDOIT }}
